--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="profile">      
       <div class="section__pic-container">
         <div class="section-container">
-        <img src="./assets/profilepic.png" alt="Saad Tariq profile picture" />
+        <img src="./assets/profilepic.png" alt="muhammad-umar-farooq profile picture" />
       </div>
 
       
