--- a/index.html
+++ b/index.html
@@ -315,6 +315,37 @@
             </div>
           </div>
           
+          <div class="details-container color-container">
+            <br>
+            <div class="article-container">
+              <img
+                src="./assets/ppt.PNG"
+                alt="Project 1"
+                class="project-img"
+              />      
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2 class="experience-sub-title project-title">AI-Presentation </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/mumareng/Ai-Presentation', '_blank')"
+              >
+                Github
+              </button>
+
+              <button class="btn btn-color-2 project-btn" 
+              onclick="window.open('https://ai-presentation.streamlit.app/')"
+              > 
+              view
+            </button>
+            </div>
+          </div>
           
         </div>
       </div>
